--- a/style.css
+++ b/style.css
@@ -14,17 +14,15 @@
     content: "";
     clear: both;
     display: table;
-  }
-  .header {
-    background:  #f1f1f1;
-  }
-  .FL_LOGO{
+  } 
+ 
+  .fllogo{
     float: left;
     margin-right:20px; 
     width:100px;
     height:100px; 
   }
-  .MainTitle{
+  .maintitle{
     float:left; 
     position: relative; 
     left: 30px; 
@@ -88,7 +86,7 @@
       padding: 0;
     }
 
-    .MainTitle, .FL_LOGO{  
+    .maintitle, .fllogo{  
       float:none;
       text-align: center;
       position: relative; 
